--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Hello just Coursera!</h1>
-<h1>It is nice to have my own page now </h1>
+<h1>It is nice to have my own second page</h1>
 </body>
 </html>
